# incremental-rag-indexing-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENGINEERING_GUIDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/config/: settings.py
app/providers/: __init__.py  embeddings.py  fake_embedding_provider.py  fake_llm_provider.py  llm.py  llm_provider_factory.py  openai_llm_provider.py
demo/documents/: customer-support-escalation-policy.md  engineering-onboarding-guide.md  incident-response-playbook.md  manifest.json  project-atlas-brief.md
docs/: project-status.md
docs/adr/: 001-modular-monolith-architecture.md  002-domain-entities-vs-sqlalchemy-models.md  003-separate-health-and-readiness-checks.md  004-immutable-document-versions.md  005-section-versioning-and-stable-keys.md  006-deterministic-chunk-versioning.md  007-fake-deterministic-embeddings.md  009-cross-version-embedding-reuse.md  010-vector-index-current-projection.md  (+12 more)
migrations/: env.py  script.py.mako
scripts/: preview_demo_dataset.py  seed_demo_dataset.py  seed_demo_evaluation_cases.py
seed_documents/: adr-001-pgvector-retrieval-architecture.md  project-atlas-status.md  redis-queue-backlog-runbook.md
tests/: test_api_dependencies.py  test_grounded_answer_api.py  test_health.py  test_ingestion_discovery.py  test_llm_provider_call_api.py  test_llm_usage_api.py  test_local_seed_ingestion_api.py  test_readiness.py  test_retrieval_evaluation_api.py  test_retrieval_evaluation_run_api.py  test_semantic_retrieval_api.py
(+174 files in other folders)
